codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__login_accounts_view__tests__auto_current_login_not_pooled.snap
---
source: tui/src/bottom_pane/login_accounts_view_tests.rs
expression: "render_snapshot(&buf, area)"
---
┌──────────────────────────── Manage Accounts ─────────────────────────────┐
│ Connected Accounts                                                       │
│                                                                          │
│ This credential mode keeps one current login. It is not enrolled in the  │
│ account-switching pool; signing in again replaces it.                    │
│                                                                          │
│ > API key (current)  auto storage - not in switching pool                │
│                                                                          │
│ Replace current login...                                                 │
│                                                                          │
│ up/down Navigate  Enter Add/repair when available  Esc Close             │
└──────────────────────────────────────────────────────────────────────────┘
