codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__login_accounts_view__tests__keyring_login_replaced.snap
---
source: tui/src/bottom_pane/login_accounts_view_tests.rs
expression: "render_snapshot(&buf, area)"
---
┌─────────────────── Replace Login ────────────────────┐
│ Login replaced                                       │
│                                                      │
│ The account list will refresh with the current       │
│ login.                                               │
│                                                      │
│ Enter Continue  Esc Back                             │
│                                                      │
└──────────────────────────────────────────────────────┘
