codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__login_accounts_view__tests__loaded_account_list_disconnect_hint.snap
---
source: tui/src/bottom_pane/login_accounts_view_tests.rs
expression: "render_snapshot(&buf, area)"
---
┌────────────────── Manage Accounts ───────────────────┐
│ Connected Accounts                                   │
│                                                      │
│ > ChatGPT (current)                                  │
│ API key                                              │
│                                                      │
│ Add account...                                       │
│                                                      │
│ up/down Navigate  Enter Select  d Disconnect  Esc    │
│ Close                                                │
└──────────────────────────────────────────────────────┘
