codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__login_accounts_view__tests__unhealthy_account_requires_sign_in.snap
---
source: tui/src/bottom_pane/login_accounts_view_tests.rs
expression: "render_snapshot(&buf, area)"
---
┌───────────────────────── Manage Accounts ──────────────────────────┐
│ Connected Accounts                                                 │
│                                                                    │
│ > ChatGPT (sign-in required)                                       │
│                                                                    │
│ Add account...                                                     │
│                                                                    │
│ up/down Navigate  Enter Add/repair when available  Esc Close       │
└────────────────────────────────────────────────────────────────────┘
